Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69416

qtwebbrowser asserts in debug: Check failed: file->path().IsAbsolute()

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.12.0 Alpha
    • 5.12
    • WebEngine
    • None
    • Linux/X11
    • 67e6b9e679856975161e85ee8011fac94b59bb22

    Description

      qtwebbrowser: http://code.qt.io/cgit/qt-apps/qtwebbrowser.git/

      I can reproduce this by loading pages like www.google.com or www.qt.io Custom, simple html pages work. I couldn't reproduce the assert with simplebrowser and quicknanobrowser.

      [14811:14829:0711/141133.599742:FATAL:lock_table.cc(18)] Check failed: file->path().IsAbsolute().
      
      #0 0x7f468b3710ea base::debug::StackTrace::StackTrace()
      
      #1 0x7f468b36e01f base::debug::StackTrace::StackTrace()
      
      #2 0x7f468b3b2db2 logging::LogMessage::~LogMessage()
      
      #3 0x7f468d7f8195 filesystem::LockTable::LockFile()
      
      #4 0x7f468d7f7c1e filesystem::FileImpl::Lock()
      
      #5 0x7f4687d9eb26 filesystem::mojom::FileStubDispatch::AcceptWithResponder()
      
      #6 0x7f468d7f6614 filesystem::mojom::FileStub<>::AcceptWithResponder()
      
      #7 0x7f468b9d4d97 mojo::InterfaceEndpointClient::HandleValidatedMessage()
      
      #8 0x7f468b9d2f3d mojo::InterfaceEndpointClient::HandleIncomingMessageThunk::Accept()
      
      #9 0x7f468ba0821a mojo::FilterChain::Accept()
      
      #10 0x7f468b9d45a1 mojo::InterfaceEndpointClient::HandleIncomingMessage()
      
      #11 0x7f468b9df6dd mojo::internal::MultiplexRouter::ProcessIncomingMessage()
      
      #12 0x7f468b9ddf31 mojo::internal::MultiplexRouter::Accept()
      
      #13 0x7f468ba0821a mojo::FilterChain::Accept()
      
      #14 0x7f468b9cb4f3 mojo::Connector::ReadSingleMessage()
      
      #15 0x7f468b9cb6cf mojo::Connector::ReadAllAvailableMessages()
      
      #16 0x7f468b9cacb0 mojo::Connector::OnHandleReadyInternal()
      
      #17 0x7f468b9caab8 mojo::Connector::OnSyncHandleWatcherHandleReady()
      
      #18 0x7f468b9ce879 _ZN4base8internal13FunctorTraitsIMN4mojo9ConnectorEFvjEvE6InvokeIPS3_JjEEEvS5_OT_DpOT0_
      
      #19 0x7f468b9ce5fd _ZN4base8internal12InvokeHelperILb0EvE8MakeItSoIRKMN4mojo9ConnectorEFvjEJPS5_jEEEvOT_DpOT0_
      
      #20 0x7f468b9ce18a _ZN4base8internal7InvokerINS0_9BindStateIMN4mojo9ConnectorEFvjEJNS0_17UnretainedWrapperIS4_EEEEEFvjEE7RunImplIRKS6_RKSt5tupleIJS8_EEJLm0EEEEvOT_OT0_St16integer_sequenceImJXspT1_EEEOj
      
      #21 0x7f468b9cdcee _ZN4base8internal7InvokerINS0_9BindStateIMN4mojo9ConnectorEFvjEJNS0_17UnretainedWrapperIS4_EEEEEFvjEE3RunEPNS0_13BindStateBaseEj
      
      #22 0x7f4688a66e8e _ZNKR4base17RepeatingCallbackIFvjEE3RunEj
      
      #23 0x7f468b9fab0e mojo::SyncHandleRegistry::Wait()
      
      #24 0x7f468b9f8430 mojo::SyncEventWatcher::SyncWatch()
      
      #25 0x7f468b9f2123 mojo::SequenceLocalSyncEventWatcher::SequenceLocalState::SyncWatch()
      
      #26 0x7f468b9f246a mojo::SequenceLocalSyncEventWatcher::SyncWatch()
      
      #27 0x7f468b9e0e9e mojo::internal::MultiplexRouter::InterfaceEndpoint::SyncWatch()
      
      #28 0x7f468b9d41d1 mojo::InterfaceEndpointClient::AcceptWithResponder()
      
      #29 0x7f4687d979ee filesystem::mojom::FileProxy::Lock()
      
      #30 0x7f468f950ad2 leveldb::LevelDBMojoProxy::LockFileImpl()
      
      #31 0x7f468f959aaf _ZN4base8internal13FunctorTraitsIMN7leveldb16LevelDBMojoProxyEFvPNS3_9OpaqueDirERKNSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEEPNS_4File5ErrorEPPNS3_10OpaqueLockEEvE6InvokeIRK13scoped_refptrIS3_EJRKS5_SD_RKSG_RKSJ_EEEvSL_OT_DpOT0_
      
      #32 0x7f468f958484 _ZN4base8internal12InvokeHelperILb0EvE8MakeItSoIRKMN7leveldb16LevelDBMojoProxyEFvPNS5_9OpaqueDirERKNSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEEPNS_4File5ErrorEPPNS5_10OpaqueLockEEJRK13scoped_refptrIS5_ERKS7_SF_RKSI_RKSL_EEEvOT_DpOT0_
      
      #33 0x7f468f95685f _ZN4base8internal7InvokerINS0_9BindStateIMN7leveldb16LevelDBMojoProxyEFvPNS4_9OpaqueDirERKNSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEEPNS_4File5ErrorEPPNS4_10OpaqueLockEEJ13scoped_refptrIS4_ES6_SC_SH_SK_EEEFvvEE7RunImplIRKSM_RKSt5tupleIJSO_S6_SC_SH_SK_EEJLm0ELm1ELm2ELm3ELm4EEEEvOT_OT0_St16integer_sequenceImJXspT1_EEE
      
      #34 0x7f468f9539b5 _ZN4base8internal7InvokerINS0_9BindStateIMN7leveldb16LevelDBMojoProxyEFvPNS4_9OpaqueDirERKNSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEEPNS_4File5ErrorEPPNS4_10OpaqueLockEEJ13scoped_refptrIS4_ES6_SC_SH_SK_EEEFvvEE3RunEPNS0_13BindStateBaseE
      
      #35 0x7f468798c384 _ZNKR4base17RepeatingCallbackIFvvEE3RunEv
      
      #36 0x7f468f94fa4c leveldb::LevelDBMojoProxy::DoOnOtherThread()
      
      #37 0x7f468f959db7 _ZN4base8internal13FunctorTraitsIMN7leveldb16LevelDBMojoProxyEFvRKNS_17RepeatingCallbackIFvvEEEPNS_13WaitableEventEEvE6InvokeIRK13scoped_refptrIS3_EJS8_SA_EEEvSC_OT_DpOT0_
      
      #38 0x7f468f9587e2 _ZN4base8internal12InvokeHelperILb0EvE8MakeItSoIRKMN7leveldb16LevelDBMojoProxyEFvRKNS_17RepeatingCallbackIFvvEEEPNS_13WaitableEventEEJRK13scoped_refptrIS5_ESA_SC_EEEvOT_DpOT0_
      
      #39 0x7f468f957124 _ZN4base8internal7InvokerINS0_9BindStateIMN7leveldb16LevelDBMojoProxyEFvRKNS_17RepeatingCallbackIFvvEEEPNS_13WaitableEventEEJ13scoped_refptrIS4_ES7_NS0_17UnretainedWrapperISA_EEEEES6_E7RunImplIRKSD_RKSt5tupleIJSF_S7_SH_EEJLm0ELm1ELm2EEEEvOT_OT0_St16integer_sequenceImJXspT1_EEE
      
      #40 0x7f468f953da4 _ZN4base8internal7InvokerINS0_9BindStateIMN7leveldb16LevelDBMojoProxyEFvRKNS_17RepeatingCallbackIFvvEEEPNS_13WaitableEventEEJ13scoped_refptrIS4_ES7_NS0_17UnretainedWrapperISA_EEEEES6_E3RunEPNS0_13BindStateBaseE
      
      #41 0x7f46871fb61e _ZNO4base12OnceCallbackIFvvEE3RunEv
      
      #42 0x7f468b371945 base::debug::TaskAnnotator::RunTask()
      
      #43 0x7f468b4bba16 base::internal::TaskTracker::RunOrSkipTask()
      
      #44 0x7f468b4bd1ee base::internal::TaskTrackerPosix::RunOrSkipTask()
      
      #45 0x7f468b4bafae base::internal::TaskTracker::RunAndPopNextTask()
      
      #46 0x7f468b4b09c2 base::internal::SchedulerWorker::Thread::ThreadMain()
      
      #47 0x7f468b4cc067 base::(anonymous namespace)::ThreadFunc()
      
      #48 0x7f468452196a <unknown>
      
      #49 0x7f46838b105f clone
      
      
      
      Received signal 6
      
      #0 0x7f468b3710ea base::debug::StackTrace::StackTrace()
      
      #1 0x7f468b36e01f base::debug::StackTrace::StackTrace()
      
      #2 0x7f468b36fd1e base::debug::(anonymous namespace)::StackDumpSignalHandler()
      
      #3 0x7f468452e0a0 <unknown>
      
      #4 0x7f46837e367b gsignal
      
      #5 0x7f46837e4ec1 abort
      
      #6 0x7f468b36d36f base::debug::(anonymous namespace)::DebugBreak()
      
      #7 0x7f468b36d388 base::debug::BreakDebugger()
      
      #8 0x7f468b3b3264 logging::LogMessage::~LogMessage()
      
      #9 0x7f468d7f8195 filesystem::LockTable::LockFile()
      
      #10 0x7f468d7f7c1e filesystem::FileImpl::Lock()
      
      #11 0x7f4687d9eb26 filesystem::mojom::FileStubDispatch::AcceptWithResponder()
      
      #12 0x7f468d7f6614 filesystem::mojom::FileStub<>::AcceptWithResponder()
      
      #13 0x7f468b9d4d97 mojo::InterfaceEndpointClient::HandleValidatedMessage()
      
      #14 0x7f468b9d2f3d mojo::InterfaceEndpointClient::HandleIncomingMessageThunk::Accept()
      
      #15 0x7f468ba0821a mojo::FilterChain::Accept()
      
      #16 0x7f468b9d45a1 mojo::InterfaceEndpointClient::HandleIncomingMessage()
      
      #17 0x7f468b9df6dd mojo::internal::MultiplexRouter::ProcessIncomingMessage()
      
      #18 0x7f468b9ddf31 mojo::internal::MultiplexRouter::Accept()
      
      #19 0x7f468ba0821a mojo::FilterChain::Accept()
      
      #20 0x7f468b9cb4f3 mojo::Connector::ReadSingleMessage()
      
      #21 0x7f468b9cb6cf mojo::Connector::ReadAllAvailableMessages()
      
      #22 0x7f468b9cacb0 mojo::Connector::OnHandleReadyInternal()
      
      #23 0x7f468b9caab8 mojo::Connector::OnSyncHandleWatcherHandleReady()
      
      #24 0x7f468b9ce879 _ZN4base8internal13FunctorTraitsIMN4mojo9ConnectorEFvjEvE6InvokeIPS3_JjEEEvS5_OT_DpOT0_
      
      #25 0x7f468b9ce5fd _ZN4base8internal12InvokeHelperILb0EvE8MakeItSoIRKMN4mojo9ConnectorEFvjEJPS5_jEEEvOT_DpOT0_
      
      #26 0x7f468b9ce18a _ZN4base8internal7InvokerINS0_9BindStateIMN4mojo9ConnectorEFvjEJNS0_17UnretainedWrapperIS4_EEEEEFvjEE7RunImplIRKS6_RKSt5tupleIJS8_EEJLm0EEEEvOT_OT0_St16integer_sequenceImJXspT1_EEEOj
      
      #27 0x7f468b9cdcee _ZN4base8internal7InvokerINS0_9BindStateIMN4mojo9ConnectorEFvjEJNS0_17UnretainedWrapperIS4_EEEEEFvjEE3RunEPNS0_13BindStateBaseEj
      
      #28 0x7f4688a66e8e _ZNKR4base17RepeatingCallbackIFvjEE3RunEj
      
      #29 0x7f468b9fab0e mojo::SyncHandleRegistry::Wait()
      
      #30 0x7f468b9f8430 mojo::SyncEventWatcher::SyncWatch()
      
      #31 0x7f468b9f2123 mojo::SequenceLocalSyncEventWatcher::SequenceLocalState::SyncWatch()
      
      #32 0x7f468b9f246a mojo::SequenceLocalSyncEventWatcher::SyncWatch()
      
      #33 0x7f468b9e0e9e mojo::internal::MultiplexRouter::InterfaceEndpoint::SyncWatch()
      
      #34 0x7f468b9d41d1 mojo::InterfaceEndpointClient::AcceptWithResponder()
      
      #35 0x7f4687d979ee filesystem::mojom::FileProxy::Lock()
      
      #36 0x7f468f950ad2 leveldb::LevelDBMojoProxy::LockFileImpl()
      
      #37 0x7f468f959aaf _ZN4base8internal13FunctorTraitsIMN7leveldb16LevelDBMojoProxyEFvPNS3_9OpaqueDirERKNSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEEPNS_4File5ErrorEPPNS3_10OpaqueLockEEvE6InvokeIRK13scoped_refptrIS3_EJRKS5_SD_RKSG_RKSJ_EEEvSL_OT_DpOT0_
      
      #38 0x7f468f958484 _ZN4base8internal12InvokeHelperILb0EvE8MakeItSoIRKMN7leveldb16LevelDBMojoProxyEFvPNS5_9OpaqueDirERKNSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEEPNS_4File5ErrorEPPNS5_10OpaqueLockEEJRK13scoped_refptrIS5_ERKS7_SF_RKSI_RKSL_EEEvOT_DpOT0_
      
      #39 0x7f468f95685f _ZN4base8internal7InvokerINS0_9BindStateIMN7leveldb16LevelDBMojoProxyEFvPNS4_9OpaqueDirERKNSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEEPNS_4File5ErrorEPPNS4_10OpaqueLockEEJ13scoped_refptrIS4_ES6_SC_SH_SK_EEEFvvEE7RunImplIRKSM_RKSt5tupleIJSO_S6_SC_SH_SK_EEJLm0ELm1ELm2ELm3ELm4EEEEvOT_OT0_St16integer_sequenceImJXspT1_EEE
      
      #40 0x7f468f9539b5 _ZN4base8internal7InvokerINS0_9BindStateIMN7leveldb16LevelDBMojoProxyEFvPNS4_9OpaqueDirERKNSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEEPNS_4File5ErrorEPPNS4_10OpaqueLockEEJ13scoped_refptrIS4_ES6_SC_SH_SK_EEEFvvEE3RunEPNS0_13BindStateBaseE
      
      #41 0x7f468798c384 _ZNKR4base17RepeatingCallbackIFvvEE3RunEv
      
      #42 0x7f468f94fa4c leveldb::LevelDBMojoProxy::DoOnOtherThread()
      
      #43 0x7f468f959db7 _ZN4base8internal13FunctorTraitsIMN7leveldb16LevelDBMojoProxyEFvRKNS_17RepeatingCallbackIFvvEEEPNS_13WaitableEventEEvE6InvokeIRK13scoped_refptrIS3_EJS8_SA_EEEvSC_OT_DpOT0_
      
      #44 0x7f468f9587e2 _ZN4base8internal12InvokeHelperILb0EvE8MakeItSoIRKMN7leveldb16LevelDBMojoProxyEFvRKNS_17RepeatingCallbackIFvvEEEPNS_13WaitableEventEEJRK13scoped_refptrIS5_ESA_SC_EEEvOT_DpOT0_
      
      #45 0x7f468f957124 _ZN4base8internal7InvokerINS0_9BindStateIMN7leveldb16LevelDBMojoProxyEFvRKNS_17RepeatingCallbackIFvvEEEPNS_13WaitableEventEEJ13scoped_refptrIS4_ES7_NS0_17UnretainedWrapperISA_EEEEES6_E7RunImplIRKSD_RKSt5tupleIJSF_S7_SH_EEJLm0ELm1ELm2EEEEvOT_OT0_St16integer_sequenceImJXspT1_EEE
      
      #46 0x7f468f953da4 _ZN4base8internal7InvokerINS0_9BindStateIMN7leveldb16LevelDBMojoProxyEFvRKNS_17RepeatingCallbackIFvvEEEPNS_13WaitableEventEEJ13scoped_refptrIS4_ES7_NS0_17UnretainedWrapperISA_EEEEES6_E3RunEPNS0_13BindStateBaseE
      
      #47 0x7f46871fb61e _ZNO4base12OnceCallbackIFvvEE3RunEv
      
      #48 0x7f468b371945 base::debug::TaskAnnotator::RunTask()
      
      #49 0x7f468b4bba16 base::internal::TaskTracker::RunOrSkipTask()
      
      #50 0x7f468b4bd1ee base::internal::TaskTrackerPosix::RunOrSkipTask()
      
      #51 0x7f468b4bafae base::internal::TaskTracker::RunAndPopNextTask()
      
      #52 0x7f468b4b09c2 base::internal::SchedulerWorker::Thread::ThreadMain()
      
      #53 0x7f468b4cc067 base::(anonymous namespace)::ThreadFunc()
      
      #54 0x7f468452196a <unknown>
      
      #55 0x7f46838b105f clone
      
      r8: 0000000000000000 r9: 00007f4649ff6e60 r10: 0000000000000008 r11: 0000000000000246
      
      r12: 00000000000013c1 r13: 00007f46581932e0 r14: 00007f46497f6bf8 r15: 00007f462c0b8bb0
      
      di: 0000000000000002 si: 00007f4649ff6e60 bp: 00007f4649ff70b0 bx: 0000000000000006
      
      dx: 0000000000000000 ax: 0000000000000000 cx: 00007f46837e367b sp: 00007f4649ff6e60
      
      ip: 00007f46837e367b efl: 0000000000000246 cgf: 002b000000000033 erf: 0000000000000000
      
      trp: 0000000000000000 msk: 0000000000000000 cr2: 0000000000000000
      
      [end of stack trace]

      Attachments

        For Gerrit Dashboard: QTBUG-69416
        # Subject Branch Project Status CR V

        Activity

          People

            pvarga Peter Varga
            pvarga Peter Varga
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes