Update user dir associated to BrowserContext when chaging profile's path

Otherwise, setting a WebEngineProfile to non-off-the-record would assert.
Therefore, now it is safe to set the quicknanobrowser's defaultProfile to
non-off-the-record.

Task-number: QTBUG-69416
Change-Id: I5ca2230e12e457dd9963e386708f2394ae4c8cea
Reviewed-by: Michal Klocek <michal.klocek@qt.io>